<resources>
    <string name="app_name">Стоп Энурез</string>
    <string name="about">О программе</string>
    <string name="collectData">Сбор данных</string>
    <string name="training">Обучение</string>
    <string name="usage">Использование</string>
    <string name="settings">Настройки</string>
    <string name="bottomNavAbout">О ПРОГРАММЕ</string>
    <string name="bottomNavCollectData">СБОР ДАННЫХ</string>
    <string name="bottomNavTraining">ОБУЧЕНИЕ</string>
    <string name="bottomNavUsage">ЗАПУСК</string>
    <string name="bottomNavSettings">НАСТРОЙКИ</string>
    <string name="volumeThreshold">Порог срабатывания</string>
    <string name="volumeThresholdValue">Порог срабатывания: %1$d</string>
    <string name="silenceCounterInitial">тишина: 0</string>
    <string name="rustlingCounterInitial">ёрзает: 0</string>
    <string name="silenceCounter">тишина: %1$d</string>
    <string name="rustlingCounter">ёрзает: %1$d</string>
    <string name="thresholdLabel">Порог: %1$d</string>
    <string name="startRecording">Начать запись</string>
    <string name="stopRecording">Остановить запись</string>
    <string name="playAudioFragment">Воспроизвести фрагмент</string>
    <string name="deleteAudioFragment">Удалить фрагмент</string>
    <string name="acceptAudioFragment">Принять и сохранить фрагмент</string>
    <string name="selectionBegin">Начало выделения</string>
    <string name="selectionEnd">Конец выделения</string>
    <string name="recordAudioPermissionNeeded">Нужно разрешение на запись звука</string>
    <string name="failedToInitMicrophone">Не удалось инициализировать микрофон</string>
    <string name="noAccessToMicrophone">Нет доступа к микрофону</string>
    <string name="audioRecordingSettingsError">Ошибка параметров аудиозаписи</string>
    <string name="audioRecordNotInitialized">AudioRecord не инициализирован</string>
    <string name="rustlingThresholdExceedance">Превышение порога для ёрзания</string>
    <string name="percentValue">%1$d%%</string>
    <string name="defaultRustlingThresholdExceedanceValue" formatted="false">70%</string>
    <string name="alarmRustlingDetectionsPerMinute">Число срабатываний детектора в минуту для активации будильника</string>
    <string name="integerValue">%1$d</string>
    <string name="audioFragmentDeleted">Фрагмент удалён</string>
    <string name="audioFragmentSavedAsSilence">Фрагмент сохранён как тишина</string>
    <string name="audioFragmentSaved">Фрагмент сохранён</string>
    <string name="modelNotTrained">Модель\nне обучена</string>
    <string name="trainingInProgress">Идёт обучение</string>
    <string name="modelTrainedWithAccuracy">Модель обучена\nТочность: %1$d%%</string>
    <string name="trainingDatasetStats">Выборка:\nёрзает: %1$d примеров\nтишина: %2$d примеров</string>
    <string name="balanceTrainingDataset">Сбалансировать выборку</string>
    <string name="startTraining">Начать обучение</string>
    <string name="clearTrainingDataset">Очистить выборку</string>
    <string name="clearTrainingDatasetDialogMessage">Все файлы обучающей выборки будут удалены. Вы уверены?</string>
    <string name="confirm">Да</string>
    <string name="cancel">Отмена</string>
    <string name="notEnoughTrainingSamples">Недостаточно примеров для обучения</string>
    <string name="trainingFailed">Не удалось обучить модель</string>
    <string name="usageHello">Привет!</string>
    <string name="usageSleeping">Z-z-z...</string>
    <string name="usageGoToToilet">Кажется, пора\nв туалет</string>
    <string name="usageContinue">Продолжим?</string>
    <string name="startListening">Начать слушать</string>
    <string name="stopListening">Остановить</string>
    <string name="turnOffAlarm">Выключить будильник</string>
    <string name="falseAlarm">Ложная тревога</string>
    <string name="success">Успех!</string>
    <string name="modelFileNotFound">Сначала обучите модель</string>
    <string name="nextAlarmAllowed">Следующее срабатывание не ранее %1$s</string>
    <string name="dataCollectionNotificationChannel">Сбор данных</string>
    <string name="dataCollectionNotificationTitle">Идёт запись данных</string>
    <string name="dataCollectionNotificationText">тишина: %1$d, ёрзает: %2$d</string>
    <string name="usageNotificationChannel">Запуск</string>
    <string name="usageNotificationTitle">Мониторинг</string>
    <string name="usageMonitoringNotificationText">Приложение слушает микрофон</string>
    <string name="usageAlarmNotificationText">Сработал будильник. Разблокируйте телефон, чтобы выключить.</string>
    <string name="usagePostAlarmNotificationText">Выберите результат срабатывания</string>
</resources>
