<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/aboutFragment"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about" />

    <item
        android:id="@+id/dataCollectionFragment"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/collectData" />

    <item
        android:id="@+id/trainingFragment"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/training" />

    <item
        android:id="@+id/usageFragment"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        android:title="@string/usage" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings" />

</menu>
